--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,100 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Ubuntu", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.mainBox {
+  width: 850px;
+  padding: 15px;
+  margin: 0 auto;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: auto;
+}
+
+table,
+td,
+tr,
+th {
+  border: 1px solid black;
+  text-align: center;
+}
+
+th {
+  min-width: 20%;
+  padding: 10px;
+  text-transform: uppercase;
+}
+
+tbody tr {
+  height: 25px;
+}
+
+td {
+  word-break: break-all;
+  padding: 5px;
+}
+td button {
+  margin: 0 5px;
+}
+
+button {
+  cursor: pointer;
+}
+
+.newForm {
+  display: flex;
+  flex-direction: column;
+
+  width: 450px;
+  margin: 0 auto;
+}
+
+.newForm input {
+  margin: 10px 0;
+  padding: 10px;
+  border-radius: 10px;
+  outline: none;
+  border: 1px solid black;
+}
+
+.submitBtn {
+  width: 200px;
+  align-self: center;
+  margin-bottom: 20px;
+  padding: 10px;
+  font-size: 14px;
+  color: #ffffff;
+  font-weight: 700;
+  border: none;
+  border-radius: 10px;
+  background: green;
+}
+
+.arrow {
+  width: 25px;
+  height: 25px;
+  margin: 0 5px;
+  padding: 0;
+  background: lightblue;
+  border: none;
+  border-radius: 50%;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.action {
+  width: 25px;
+  height: 25px;
+  margin: 0 5px;
+  padding: 0;
+  border: none;
+  border-radius: 50%;
+  text-align: center;
+  vertical-align: middle;
 }
